--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: center;
     perspective: 1000px;
+    -moz-perspective: 1000px;
   }
   .container {
     width: 50%;
@@ -20,6 +21,7 @@
   }
   .card {
     transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
     min-height: 80vh;
     width: 35rem;
     border-radius: 30px;
